tests/ui/macros/issue-41776.stderr
error: argument must be a string literal
  --> $DIR/issue-41776.rs:2:14
   |
LL |     include!(line!());
   |              ^^^^^^^

error: aborting due to 1 previous error

